# QuerySphere

./: .gitignore  .python-version  README.md  docker-compose.yaml  env_example  pyproject.toml
backend/app/: chain.py  database.py  database_model.py  dto.py  main.py
backend/app/repository/: document_metadata.py
backend/app/router/: document_metadata.py
backend/app/service/: document_metadata.py
backend/core/: config.py  constants.py  embedding.py  storage.py
backend/scripts/: ingest.py  purge.py
frontend/: .prettierrc  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/stream_log/: route.ts
frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  InlineCitation.tsx  MyTable.tsx  SearchBar.tsx  SearchItem.tsx  SourceBubble.tsx  SourceBubble_Refactor.tsx
frontend/app/utils/: constants.tsx  sendFeedback.tsx
